--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==2.0.5
 django-filter==1.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
 idna==2.6
 isort==4.3.4
 itypes==1.1.0
@@ -18,13 +19,16 @@ MarkupSafe==1.0
 mccabe==0.6.1
 mysqlclient==1.3.12
 openapi-codec==1.3.2
+Pillow==5.1.0
 pycodestyle==2.4.0
+PyJWT==1.6.1
 pylint==1.8.4
 python-dotenv==0.8.2
 pytz==2018.4
 requests==2.18.4
 simplejson==3.14.0
 six==1.11.0
+sorl-thumbnail==12.4.1
 uritemplate==3.0.0
 urllib3==1.22
 wrapt==1.10.11
