--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.0.5
+django-cors-headers==2.2.0
 django-filter==1.1.0
+django-money==0.13.2
 django-rest-swagger==2.2.0
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
@@ -20,6 +22,7 @@ mccabe==0.6.1
 mysqlclient==1.3.12
 openapi-codec==1.3.2
 Pillow==5.1.0
+py-moneyed==0.7.0
 pycodestyle==2.4.0
 PyJWT==1.6.1
 pylint==1.8.4
